<resources>
    <string name="app_name">Swarm Mobile</string>
    <string name="start_node">Start Node</string>
    <string name="node_configuration">Node Configuration</string>

    <string name="node_info">Node Information</string>
    <string name="node_id">Node Address:</string>
    <string name="status">Status:</string>

    <string name="configuration">Configuration</string>
    <string name="password">Password</string>
    <string name="rpc_endpoint">RPC Endpoint</string>
    <string name="default_rpc_endpoint">https://xdai.fairdatasociety.org</string>
    <string name="nat_address">NAT Address</string>

    <string name="download">Download by Swarm Hash</string>
    <string name="hash_hint">Swarm Hash</string>
    <string name="download_button">Download</string>

    <string name="wallet_info">Wallet Information\n</string>


    <string name="peers_info">Connected Peers: \n</string>
    <string name="no_peers">0</string>


    <string-array name="node_modes">
        <item>ultra light</item>
        <item>light</item>
    </string-array>
</resources>
